# NoteVault

./: .gitignore  CHANGELOG.md  QandA.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/notevault/: backup_discovery.py  cli.py  exporter.py  notes_parser.py  writer.py
tests/: conftest.py  test_e2e.py  test_exporter.py  test_notes_parser.py  test_writer.py
